CMAKE_MINIMUM_REQUIRED(VERSION 3.7)
SET(CMAKE_CXX_STANDARD 11)

if (UNIX)
  ADD_DEFINITIONS(-Wno-sign-compare -Wno-enum-compare)
endif (UNIX)

PROJECT(hiredisx)

INCLUDE("${CMAKE_CURRENT_LIST_DIR}/hiredis.cmake")

INSTALL(
  DIRECTORY ${CMAKE_SOURCE_DIR}/src/
  DESTINATION "include/hiredisx"
  FILES_MATCHING PATTERN "*.hpp"
)
